Created form for posting user schedule

--- a/Web.config
+++ b/Web.config
@@ -12,7 +12,7 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
   <connectionStrings>
-    <add name="login" connectionString="Server=localhost;Database=chartwells; user id=sa; password=password"/>
+    <add name="login" connectionString="Data Source=SHAVVY\SQLEXPRESS;Initial Catalog=ChartWells;Integrated Security=True"/>
   </connectionStrings>
 <appSettings>
       <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
